--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
+    "sockjs": "^0.3.18",
+    "sockjs-client": "^1.1.2",
+    "stomp": "^0.1.1",
+    "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
