--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
+/client/dist
+/client/tmp
+/server/build
+/server/target
 
 # dependencies
 /client/node_modules
